@@ -551,7 +551,8 @@ c_value_print (struct value *val, struct ui_file *stream, int format,
                   type = lookup_reference_type (real_type);
                 }
 	      /* JYG: Need to adjust pointer value. */
-              val->aligner.contents[0] -= top;
+	      /* NOTE: cagney/2005-01-02: THIS IS BOGUS.  */
+              value_contents_writeable (val)[0] -= top;
 
               /* Note: When we look up RTTI entries, we don't get any 
                  information on const or volatile attributes */
